
===========
Changes log
===========

- @version-full@ (@release-date@)
    - Misc
      - Removed deprecated extensions emf, javamail, jaxrs, jibx, lucene, nio, 
        oauth, openid, platform, raml, simple, wadl. Issue #1351.
      - Removed generation of Eclipse p2 artifacts from the build since the 
        Eclipse p2 site is no more maintained.
      - Refresh copyright headers. Issue #1351.
      - Upgraded to JDK 11. Issue #1351.
      - Upgraded FileUpload library to version 1.4. Issue #1353.
      - Upgraded GSON library to version 2.8.6. Issue #1353.
      - Upgraded Guice library to version 4.2.2. Issue #1353.
      - Upgraded JaxB library to version 2.4.0-b180830.0438. Issue #1353.
      - Upgraded Spring Framework library to version 5.2.2-RELEASE. Issue #1353.
      - Upgraded Thymeleaf library to version 3.0.11. Issue #1353.
      - Upgraded Velocity library to version 2.1. Issue #1353.
      - Upgraded Guava library to version 28.1-jre. Issue #1353.
      - Upgraded Jackson library to version 2.10.1. Issue #1353.
      - Upgraded Snakeyaml library to version 1.24. Issue #1353.
      - Upgraded Jetty library to version 9.4.24.v20191120. Issue #1353.